# mcp-rest-sample

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.stdio  LICENSE  README.md
.cursor/: mcp.json
.cursor/rules/: python-programming.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: make-pr-body.sh
.github/workflows/: ci.yml
app/: .gitignore  config.py  main.py  mcp_server.py  pyproject.toml  run_mcp.py  run_server.py  schemas.py  server.py
app/api/mcp/: __init__.py  body.py  family.py  health.py
app/api/rest/: __init__.py  body.py  family.py
app/internal/: catalog.py
app/logic/: family.py
app/logic/body/: bmi.py
app/models/: body.py  family.py
app/routers/: health.py  projects.py
app/tests/: test_api.py  test_catalog.py
docs/: connect-mcp.md  local-commands-python.md
scripts/: clean-git-branch.sh  enter-venv.ps1  enter-venv.sh  local-build.ps1  local-build.sh
