[project]
name = "mcp-rest-sample"
version = "0.1.0"
description = "Modern FastAPI backend template with MCP Streamable HTTP"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]==2.0.0b1",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=8.3.5",
    "ruff>=0.15.20",
]

[tool.uv]
exclude-newer = "7 days"
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
files = ["."]
exclude = [".venv"]
